# snm

./: .cursorrules  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  README.zh-CN.md  bootstrap.sh  clippy.toml  install.sh  justfile  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: bump.rs  cli.rs  corepack.rs  execute_cli.rs  fig.rs  hello.rs  lib.rs  main.rs  manage_command.rs  semver_manage_command.rs  snm_command.rs  test copy.rs  test.rs
crates/cli/tests/: install_node_test.rs  snm_cli_test.rs  snm_install_test.rs  snm_node_default_test.rs  tests.rs
crates/cli_node/: Cargo.toml
crates/cli_node/src/: main.rs
crates/cli_npx/: Cargo.toml
crates/cli_npx/src/: main.rs
crates/cli_pnpx/: Cargo.toml
crates/cli_pnpx/src/: main.rs
crates/dev-tools/: Cargo.toml
crates/dev-tools/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  node.rs  node_version.rs  node_version_home.rs
crates/package_manager/: Cargo.toml
crates/package_manager/src/: kind.rs  lib.rs  manager.rs  resolver.rs  setup.rs
crates/snm_atom/: Cargo.toml
crates/snm_atom/src/: atom.rs  conditional_compiler.rs  lib.rs  node_atom.rs  package_manager_atom.rs
crates/snm_config/: Cargo.toml
crates/snm_config/src/: env_snm_config.rs  lib.rs  snm_config.rs
crates/snm_core/: Cargo.toml
crates/snm_core/src/: color_backtrace.rs  lib.rs  load_npmrc.rs  snm_content.rs
crates/snm_core/tests/: snm_config_init_test.rs  test_load_npmrc.rs  tests.rs
crates/snm_download_builder/: Cargo.toml
crates/snm_download_builder/src/: lib.rs
crates/snm_downloader/: Cargo.toml
crates/snm_downloader/src/: lib.rs  resource.rs  resource_node.rs  resource_package_manager.rs  tarball.rs
crates/snm_ni/: Cargo.toml
crates/snm_ni/src/: lib.rs  npm_transform.rs  pnpm_transform.rs  trait_transform.rs  yarn_transform.rs
crates/snm_node/: Cargo.toml
crates/snm_node/src/: archive_extension.rs  check_supported.rs  conditional_compiler.rs  demo.rs  downloader.rs  lib.rs  node_list_remote.rs  node_mg.rs  path.rs  show_node_list.rs  snm_node.rs
crates/snm_node/tests/: parse_node_version_test.rs
crates/snm_npm/: Cargo.toml
crates/snm_npm/src/: lib.rs  snm_npm.rs
crates/snm_npmrc/: Cargo.toml
crates/snm_npmrc/src/: lib.rs
crates/snm_npmrc/tests/: lib.rs  npmrc_test.rs
crates/snm_package_json/: Cargo.toml
crates/snm_package_json/src/: downloader.rs  lib.rs  package_json.rs  package_manager_meta.rs  package_manager_raw.rs  pm.rs  pm_factory.rs  pm_metadata.rs
crates/snm_package_json/tests/: package_json_test.rs  parse_package_json_test.rs
crates/snm_package_manager/: Cargo.toml
crates/snm_package_manager/src/: lib.rs  npm_library.rs  snm_package_manager.rs
crates/snm_pm/: Cargo.toml
crates/snm_pm/src/: downloader.rs  lib.rs  npm.rs  package_json.rs  path.rs  pm.rs  pm_metadata.rs  utils.rs  yarn.rs
crates/snm_pm/tests/: parse_package_json_test.rs
crates/snm_pnpm/: Cargo.toml
crates/snm_pnpm/src/: lib.rs  snm_pnpm.rs
crates/snm_shim/: Cargo.toml
crates/snm_shim/src/: command_shim.rs  download.rs  ensure_binary_path.rs  get_default_bin_dir.rs  get_node_bin_dir.rs  get_node_version.rs  get_package_manage_version.rs  lib.rs  main.rs  node_shim.rs  package_manager_shim.rs  pm_shim.rs
crates/snm_shim/tests/: node_test.rs
crates/snm_tarball/: Cargo.toml
crates/snm_tarball/src/: lib.rs
crates/snm_test_utils/: Cargo.toml
crates/snm_test_utils/src/: lib.rs
crates/snm_utils/: Cargo.toml
crates/snm_utils/src/: check_duplicate_lock_file.rs  color_backtrace.rs  constant.rs  consts.rs  download.rs  exec.rs  find_up.rs  fmtln.rs  lib.rs  log.rs  node_version.rs  snm_error.rs  tarball.rs  to_ok.rs  ver.rs
e2e/: Cargo.toml
e2e/src/: exec_builder.rs  http_mocker.rs  lib.rs  main.rs  mock_server_manager.rs  tmp_test.rs
e2e/tests/: node_test.rs  npm_test.rs  pnpm_test.rs  snm_install_test.rs  snm_test.rs  tmp_test.rs
e2e/tests/snapshots/: node_test____test_context_wrapped_should_show_node_version.snap  node_test____test_context_wrapped_test_auto_install_node_with_node_version.snap  node_test____test_context_wrapped_test_local_node_list_is_empty.snap  node_test____test_context_wrapped_test_no_strict_and_no_default_node.snap  node_test____test_context_wrapped_test_show_node_version_with_strict_mode.snap  node_test____test_context_wrapped_test_with_strict_mode_and_has_default_node.snap  node_test__test_auto_install_node_with_node_version.snap  node_test__test_no_strict_and_no_default_node.snap  node_test__test_show_node_version_with_strict_mode.snap  node_test__test_with_strict_mode_and_has_default_node.snap  npm_test____test_context_wrapped_should_exec_npm_when_not_use_e1_env.snap  npm_test____test_context_wrapped_should_exec_npm_when_use_e1_env.snap  npm_test____test_context_wrapped_should_show_v_when_pm_configure_npm9.snap  npm_test____test_context_wrapped_test_show_npm_version_when_default_npm_missing_but_node_exists.snap  npm_test____test_context_wrapped_test_show_npm_version_when_missing_default_node_and_npm.snap  npm_test__test_show_npm_version_when_default_npm_missing_but_node_exists.snap  npm_test__test_show_npm_version_when_missing_default_node_and_npm.snap  pnpm_test____test_context_wrapped_test_111.snap.new  pnpm_test____test_context_wrapped_test_nested_pnpx.snap  snm_test____test_context_wrapped_test_snm_install_node.snap  snm_test____test_context_wrapped_test_snm_install_node2.snap  snm_test____test_context_wrapped_test_snm_install_with_node_20_npm.snap  snm_test____test_context_wrapped_test_snm_list.snap  snm_test____test_context_wrapped_test_snm_list_with_strict_mode.snap  snm_test____test_context_wrapped_test_snm_set_default_node.snap  snm_test____test_context_wrapped_test_snm_uninstall_node.snap  snm_test__test_snm_install_node.snap  snm_test__test_snm_install_set_default_npm_with_node_20.snap  snm_test__test_snm_install_set_default_pnpm.snap  snm_test__test_snm_install_set_default_yarn.snap  snm_test__test_snm_install_set_default_yarn4.snap  snm_test__test_snm_install_with_node_20_npm.snap  snm_test__test_snm_list.snap  (+6 more)
(+282 files in other folders)
