[workspace]
members = [
  "crates/cli",
  "crates/snm_pm",
  "crates/snm_npmrc",
  "crates/snm_config",
  "crates/snm_utils",
  "crates/snm_node",
  "crates/snm_shim",
  "crates/dev-tools",
  "e2e",
  "demo",
  "crates/snm_test_utils",
]

resolver = "2"


[profile.release]
codegen-units = 1
debug         = 2
lto           = true
opt-level     = "s"
strip         = "none"


[workspace.metadata.cargo-llvm-cov]
ignore-filename-regex = [".*\\.cargo/registry/src/.*", ".*target/.*", ".*ordered-multimap-0.6.0/.*"]

[workspace.dependencies]
anyhow         = "=1.0.97"
async-trait    = "=0.1.87"
chrono         = "=0.4.40"
clap           = "=4.5.32"
colored        = "=2.1.0"
config         = "=0.14.0"
dialoguer      = "=0.11.0"
dirs           = "=5.0.1"
duct           = "=0.13.7"
dunce          = "=1.0.5"
fs_extra       = "=1.3.0"
futures-util   = "=0.3.31"
insta          = "=1.36.1"
itertools      = "=0.13.0"
regex          = "=1.11.1"
remove_dir_all = "=1.0.0"
reqwest        = { version = "=0.12.14", default-features = false, features = ["rustls-tls"] }
semver         = "=1.0.24"
serde          = "=1.0.217"
serde_json     = "=1.0.135"
textwrap       = "=0.16.0"
tokio          = "=1.43.0"
wait-timeout   = "=0.2.0"

## 测试相关
tokio-test = "=0.4.4"
wiremock   = "=0.6.3"

## 日志
tracing            = "=0.1.41"
tracing-subscriber = "=0.3.19"

## 指数退避策略 (Exponential Backoff):
backoff       = { version = "=0.4" }
backoff-macro = "=0.2.0"


## 进度条
indicatif = "=0.17.8"

tempfile = "=3.16.0"


which = "=7.0.1"

test-context = "=0.3.0"
uuid         = "=1.12.1"


async-openai = "=0.27.2"
# [profile.test]
# test-threads = 1
