[workspace]
members = [
  "crates/cli",
  "crates/snm_pm",
  "crates/snm_npmrc",
  "crates/snm_config",
  "crates/snm_utils",
  "crates/snm_shim",
  "crates/dev-tools",
  "e2e",
  "demo",
  "crates/snm_test_utils",
  "crates/snm_downloader",
]

resolver = "2"


[profile.release]
codegen-units = 1
debug         = 2
lto           = true
opt-level     = "s"
strip         = "none"


[workspace.metadata.cargo-llvm-cov]
ignore-filename-regex = [".*\\.cargo/registry/src/.*", ".*target/.*", ".*ordered-multimap-0.6.0/.*"]

[workspace.dependencies]

## 异常处理
anyhow     = "=1.0.97"
color-eyre = "0.6.3"

## 异步处理
async-trait = "=0.1.87"

## 时间处理
chrono = "=0.4.40"

## 命令行解析
clap              = { version = "4.5.32", features = ["derive", "cargo"] }
clap_complete     = { version = "4.5.42" }
clap_complete_fig = { version = "4.5.2" }

## 颜色处理
colored = "=2.1.0"

## 配置处理
config = "=0.14.0"

## 对话框处理
dialoguer = "=0.11.0"

## 目录处理
dirs = "=5.0.1"

## 管道处理
duct = "=0.13.7"

# 正则
lazy-regex = "3.4.1"
regex      = "=1.11.1"

## 文件处理
dunce        = "=1.0.5"
futures-util = "=0.3.31"
insta        = "=1.36.1"
itertools    = "=0.13.0"

# 序列化
serde      = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.135"


remove_dir_all = "=1.0.0"
reqwest        = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
semver         = { version = "1.0.24" }
textwrap       = "=0.16.0"
tokio          = { version = "1.43.0", features = ["macros", "test-util"] }


## 测试相关
test-context = "=0.3.0"
tokio-test   = "=0.4.4"
wiremock     = "=0.6.3"

# 自维护
hashery           = "0.0.1"
robust_downloader = { version = "0.0.7", features = ["rustls", "sha1"] }
up_finder         = "0.0.4"


typed-builder = "0.21.0"

## 日志
tracing            = "=0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


## 进度条
indicatif = "0.17.8"

## 杂项
async-openai = "=0.27.2"
flate2       = "1.0.28"
glob         = "0.3.2"
once_cell    = "1.20.2"
tar          = "0.4.40"
tempfile     = "=3.16.0"
uuid         = "=1.12.1"
which        = "=7.0.1"
xz2          = { version = "0.1.7", features = ["static"] }
zip          = "2.1.3"

# self
snm_cli        = { path = "./crates/cli" }
snm_config     = { path = "./crates/snm_config" }
snm_dev_tools  = { path = "./crates/dev-tools" }
snm_downloader = { path = "./crates/snm_downloader" }
snm_npmrc      = { path = "./crates/snm_npmrc" }
snm_pm         = { path = "./crates/snm_pm" }
snm_shim       = { path = "./crates/snm_shim" }
snm_test_utils = { path = "./crates/snm_test_utils" }
snm_utils      = { path = "./crates/snm_utils" }

# [profile.test]
# test-threads = 1
