[package]
name = "e2e"
version = "0.1.0"
edition = "2021"



[dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0.7"
insta = { workspace = true }
duct = { workspace = true }
textwrap = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
semver = "1.0.23"
snm_utils = { path = "../crates/snm_utils" }
snm_test_utils = { path = "../crates/snm_test_utils" }
snm_node = { path = "../crates/snm_node" }
snm_config = { path = "../crates/snm_config" }
dunce = { workspace = true }
reqwest = { workspace = true }
parking_lot = "0.12.3"
once_cell = "1.20.2"
dirs = { workspace = true }
test-context = { workspace = true }