[package]
name = "e2e"
version = "0.1.0"
edition = "2021"



[dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
insta = { workspace = true }
duct = { workspace = true }
textwrap = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
snm_utils = { path = "../crates/snm_utils" }
snm_test_utils = { path = "../crates/snm_test_utils" }
snm_config = { path = "../crates/snm_config" }
dunce = { workspace = true }
reqwest = { workspace = true, default-features = false }
once_cell = "1.20.2"
dirs = { workspace = true }
test-context = { workspace = true }