[package]
name = "e2e"
version = "0.1.0"
edition = "2021"



[dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
insta = { workspace = true }
duct = { workspace = true }
textwrap = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
dunce = { workspace = true }
reqwest = { workspace = true  }
once_cell = { workspace = true }
dirs = { workspace = true }
test-context = { workspace = true }

snm_utils = { workspace = true }
snm_test_utils = { workspace = true }
snm_config = { workspace = true }