[package]
authors = ["ityuany"]
edition = "2021"
name    = "snm"
version = "0.1.0-51"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snm"
path = "src/main.rs"


[dependencies]
anyhow             = { workspace = true }
async-openai       = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true, features = ["derive", "cargo"] }
clap_complete      = "4.5.42"
clap_complete_fig  = "4.5.2"
colored            = { workspace = true }
dialoguer          = { workspace = true }
dirs               = { workspace = true }
glob               = "0.3.2"
regex              = { workspace = true }
reqwest            = { workspace = true, features = ["json", "blocking", "stream", "rustls-tls"] }
semver             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

snm_config = { workspace = true }
snm_node   = { workspace = true }
snm_pm     = { workspace = true }
snm_utils  = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
