[package]
authors = ["ityuany"]
edition = "2021"
name    = "snm"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snm"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
# async-openai       = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
clap_complete_fig  = { workspace = true }
colored            = { workspace = true }
dialoguer          = { workspace = true }
dirs               = { workspace = true }
glob               = { workspace = true }
itertools          = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# self
snm_config          = { workspace = true }
snm_downloader      = { workspace = true }
snm_node            = { workspace = true }
snm_package_manager = { workspace = true }
snm_utils           = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
