[package]
name = "cli_node"
version = "0.0.1-109"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
snm_shim ={ path = "../snm_shim" }
tokio = { version = "1.0.0", features = ["full"] }
snm_utils = { path = "../snm_utils" }
