[package]
name = "cli_npx"
version = "0.0.1-108"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "npx"
path = "src/main.rs"

[dependencies]
snm_shim ={ path = "../snm_shim" }
snm_utils = { path = "../snm_utils" }
tokio = { version = "1.0.0", features = ["full"] }
