[package]
edition = "2021"
name    = "dev-tools"
version = "0.1.0-45"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'tools'
path = "./src/main.rs"

[dependencies]
glob      = "0.3.1"
inquire   = "0.7.5"
semver    = "1.0.23"
toml_edit = "0.22.14"
