[package]
edition = "2021"
name    = "dev-tools"
version = "0.1.0-55"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'tools'
path = "./src/main.rs"

[dependencies]
glob      = { workspace = true }
inquire   = "0.7.5"
semver    = { workspace = true }
toml_edit = "0.22.14"
