[package]
edition = "2024"
name    = "snm_package_manager"
version = "0.1.0-69"

[dependencies]
anyhow              = { workspace = true }
lazy-regex          = { workspace = true }
package_json_parser = { workspace = true }
snm_config          = { workspace = true }
snm_downloader      = { workspace = true }
strum               = { workspace = true }
up_finder           = { workspace = true }
