
[package]
edition = "2021"
name    = "snm_config"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = { workspace = true }
config    = "0.14.0"
dirs      = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
snm_npmrc = { path = "../snm_npmrc" }
snm_utils = { path = "../snm_utils" }
