
[package]
edition = "2021"
name    = "snm_config"
version = "0.1.0-16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { workspace = true }
config       = { workspace = true }
dirs         = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
snm_npmrc    = { path = "../snm_npmrc" }
snm_utils    = { path = "../snm_utils" }
test-context = { workspace = true }
tokio        = { workspace = true, features = ["macros"] }


[dev-dependencies]
snm_test_utils = { path = "../snm_test_utils" }
