
[package]
edition = "2021"
name    = "snm_config"
version = "0.1.0-52"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { workspace = true }
config       = { workspace = true }
dirs         = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
test-context = { workspace = true }
tokio        = { workspace = true, features = ["macros"] }

snm_npmrc = { workspace = true }
snm_utils = { workspace = true }


[dev-dependencies]
snm_test_utils = { path = "../snm_test_utils" }
