[package]
name = "snm_core"
version = "0.0.1-90"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xz2 = {version = "0.1.7" , features = ["static"]}
dirs = "5.0.1"
tar = "0.4.40"
sha2 = "0.10.2"
sha1 = "0.10.0"
regex = "1.10.4"
colored = "2.1.0"
semver = "1.0.21"
flate2 = "1.0.28"
thiserror = "1.0.58"
dialoguer = "0.11.0"
crossterm = "0.27.0"
serde_json = "1.0.114"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["stream", "native-tls-vendored"] }
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17.8"
termcolor = "1.4.1"
backtrace = "0.3.71"
snm_utils = { path = "../snm_utils" }
snm_download_builder = { path = "../snm_download_builder" }
snm_current_dir = { path = "../snm_current_dir" }
snm_package_json = { path = "../snm_package_json" }
snm_config = { path = "../snm_config" }
snm_node_version = { path = "../snm_node_version" }
