[package]
edition = "2021"
name    = "snm_download_builder"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored      = "2.1.0"
futures-util = "0.3.30"
indicatif    = "0.17.8"
reqwest      = { workspace = true, features = ["stream", "native-tls-vendored","native-tls"] }
snm_utils    = { path = "../snm_utils" }
tokio        = { version = "1.36.0", features = ["full"] }
anyhow       = { workspace = true }
winapi = { version = "0.3", features = ["winsock2"] }