[package]
edition = "2021"
name    = "snm_download_builder"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = { workspace = true }
colored      = { workspace = true }
futures-util = "0.3.30"
indicatif    = "0.17.8"
reqwest      = { workspace = true, features = ["stream", "native-tls-vendored", "native-tls"] }
snm_utils    = { path = "../snm_utils" }
tokio        = { version = "1.36.0", features = ["full"] }
