[package]
edition = "2024"
name    = "snm_downloader"
version = "0.1.0"

[dependencies]
anyhow            = { workspace = true }
async-trait       = { workspace = true }
reqwest           = { workspace = true, features = ["json"] }
robust_downloader = { workspace = true, features = ["sha1"] }
serde             = { workspace = true, features = ["derive"] }
typed-builder     = { workspace = true }

snm_config = { workspace = true }
snm_utils  = { workspace = true }
