[package]
edition = "2024"
name    = "snm_downloader"
version = "0.1.0-52"

[dependencies]
anyhow            = { workspace = true }
async-trait       = { workspace = true }
flate2            = { workspace = true }
reqwest           = { workspace = true, features = ["json"] }
robust_downloader = { workspace = true, features = ["sha1"] }
serde             = { workspace = true, features = ["derive"] }
tar               = { workspace = true }
tracing           = { workspace = true }
typed-builder     = { workspace = true }
xz2               = { workspace = true, features = ["static"] }
zip               = { workspace = true }

snm_config = { workspace = true }
snm_utils  = { workspace = true }
