[package]
edition = "2024"
name    = "snm_downloader"
version = "0.1.0-65"

[dependencies]
anyhow            = { workspace = true }
async-trait       = { workspace = true }
flate2            = { workspace = true }
reqwest           = { workspace = true }
robust_downloader = { workspace = true }
serde             = { workspace = true }
tar               = { workspace = true }
tracing           = { workspace = true }
typed-builder     = { workspace = true }
xz2               = { workspace = true }
zip               = { workspace = true }

snm_config = { workspace = true }
snm_utils  = { workspace = true }
