[package]
name = "snm_ni"
version = "0.0.1-98"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_complete = "4.5.1"
clap_complete_fig = "4.5.0"
clap = { version = "4.5.1", features = ["derive"] }
semver = "1.0.21"
