[package]
edition = "2021"
name    = "snm_npmrc"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true }
dirs = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true, features = ["macros","test-util"] }
anyhow = { workspace = true }