[package]
name = "snm_package_json"
version = "0.0.1-118"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
snm_utils = { path = "../snm_utils" }
