[package]
name = "snm_package_json"
version = "0.0.1-119"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
snm_utils = { path = "../snm_utils" }
anyhow = "1.0.84"
clap_complete = "4.5.1"
clap_complete_fig = "4.5.0"
clap = { version = "4.5.1", features = ["derive"] }