[package]
name = "snm_package_json"
version = "0.0.1-119"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
snm_utils = { path = "../snm_utils" }
snm_config = { path = "../snm_config" }
snm_download_builder ={ path = "../snm_download_builder" }
anyhow = "1.0.84"
clap_complete = "4.5.1"
clap_complete_fig = "4.5.0"
clap = { version = "4.5.1", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.12.3", features = ["json", "blocking", "stream","native-tls-vendored"] }
sha1 = "0.10"
semver = "1.0.23"
colored = "2.1.0"
once_cell = "1.20.2"