[package]
edition = "2024"
name    = "snm_pm"
version = "0.1.0-52"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = { workspace = true }
clap              = { workspace = true, features = ["derive"] }
colored           = { workspace = true }
dialoguer         = { workspace = true }
once_cell         = "1.20.2"
regex             = { workspace = true }
reqwest           = { workspace = true, features = ["json", "blocking", "stream", "rustls-tls"] }
robust_downloader = { workspace = true, features = ["sha1"] }
semver            = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = ["macros"] }
tracing           = { workspace = true }
up_finder         = { workspace = true }

snm_config     = { workspace = true }
snm_downloader = { workspace = true }
snm_utils      = { workspace = true }
