[package]
edition = "2024"
name    = "snm_pm"
version = "0.1.0-62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = { workspace = true }
clap              = { workspace = true }
colored           = { workspace = true }
dialoguer         = { workspace = true }
once_cell         = { workspace = true }
regex             = { workspace = true }
reqwest           = { workspace = true }
robust_downloader = { workspace = true }
semver            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
up_finder         = { workspace = true }

# self
snm_config     = { workspace = true }
snm_downloader = { workspace = true }
snm_utils      = { workspace = true }
