[package]
edition = "2024"
name    = "snm_pm"
version = "0.1.0-68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow              = { workspace = true }
clap                = { workspace = true }
colored             = { workspace = true }
dialoguer           = { workspace = true }
lazy-regex          = { workspace = true }
once_cell           = { workspace = true }
package_json_parser = { workspace = true }
regex               = { workspace = true }
reqwest             = { workspace = true }
robust_downloader   = { workspace = true }
semver              = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
strum               = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
up_finder           = { workspace = true }

# self
snm_config     = { workspace = true }
snm_downloader = { workspace = true }
snm_utils      = { workspace = true }
