[package]
name = "snm_pnpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snm_npm = { path = "../snm_npm" }
snm_core = { path = "../snm_core" }
async-trait = "0.1.79"
openssl = { version = "0.10", features = ["vendored"] }