[package]
edition = "2021"
name    = "snm_shim"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "snm-shim"
path = "src/main.rs"

[dependencies]
anyhow               = "1.0.79"
colored              = "2.1.0"
dirs                 = { workspace = true }
snm_config           = { path = "../snm_config" }
snm_download_builder = { path = "../snm_download_builder" }
snm_node             = { path = "../snm_node" }
snm_pm               = { path = "../snm_pm" }
snm_utils            = { path = "../snm_utils" }
tokio                = { version = "1.0.0", features = ["full"] }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true, features = ["env-filter"] }
