[package]
edition = "2021"
name    = "snm_shim"
version = "0.1.0-50"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "snm-shim"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
colored            = { workspace = true }
dirs               = { workspace = true }
once_cell          = "1.19"
thiserror          = "1.0"
snm_config         = { path = "../snm_config" }
snm_node           = { path = "../snm_node" }
snm_pm             = { path = "../snm_pm" }
snm_utils          = { path = "../snm_utils" }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait        = { workspace = true }
