[package]
edition = "2021"
name    = "snm_shim"
version = "0.1.0-51"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "snm-shim"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
async-trait        = { workspace = true }
color-eyre         = { workspace = true }
colored            = { workspace = true }
dirs               = { workspace = true }
lazy-regex         = { workspace = true }
once_cell          = "1.19"
thiserror          = "1.0"
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
up_finder          = { workspace = true }

snm_config     = { workspace = true }
snm_downloader = { workspace = true }
snm_pm         = { workspace = true }
snm_utils      = { workspace = true }
