[package]
name = "snm_tarball"
version = "0.0.1-90"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.40"
xz2 = {version = "0.1.7" , features = ["static"]}
flate2 = "1.0.28"
snm_utils = { path = "../snm_utils" }
