[package]
edition = "2024"
name    = "snm_test_utils"
version = "0.1.0-56"

[dependencies]
anyhow       = { workspace = true }
dunce        = { workspace = true }
tempfile     = { workspace = true }
test-context = { workspace = true }
textwrap     = { workspace = true }
uuid         = { workspace = true, features = ["v4"] }
wiremock     = { workspace = true }
