[package]
edition = "2021"
name    = "snm_utils"
version = "0.0.1-119"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
colored            = { workspace = true }
config             = { workspace = true }
dialoguer          = { workspace = true }
dirs               = { workspace = true }
dunce              = { workspace = true }
flate2             = "1.0.28"
reqwest            = { workspace = true, features = ["stream", "native-tls-vendored"] }
semver             = { workspace = true }
serde_json         = { workspace = true }
tar                = "0.4.40"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wait-timeout       = { workspace = true }
which              = { workspace = true }
xz2                = { version = "0.1.7", features = ["static"] }
zip                = "2.1.3"
