[package]
edition = "2021"
name    = "snm_utils"
version = "0.1.0-51"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
colored            = { workspace = true }
config             = { workspace = true }
dialoguer          = { workspace = true }
dirs               = { workspace = true }
dunce              = { workspace = true }
futures-util       = { workspace = true }
indicatif          = { workspace = true }
reqwest            = { workspace = true, features = ["stream", "rustls-tls"] }
semver             = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
which              = { workspace = true }
